# routes/index.js
@@ -5,6 +5,8 @@ router.use("/", require("./swagger"))
 
 router.use("/contacts", require("./contacts"))
 
+router.use("/employees", require("./employees"))
+
 router.get("/", (req, res) => {
     //#swagger.tags=[Hello World!]
     res.send("Hello World!");
